plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation libs.junit
    implementation libs.guava
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['src','src/DAO']
            includes = ['**/*']
        }
    }
}

javafx {
    version = "21.0.4"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media' ]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

task customFatJar(type: Jar) {
    manifest {
        attributes 'Main-Class': 'main.Launcher'
    }
    archiveBaseName = 'all-in-one-jar'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from { 
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } 
    }
    with jar
}


run {
    jvmArgs = ['--enable-preview']
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

application {
    mainClass = 'main.Launcher'
    applicationDefaultJvmArgs = ['--enable-preview']
}

// Añade esto a tu build.gradle
task jpackageImage(type: Exec) {
    dependsOn build // Asegura que el JAR esté construido
    workingDir = project.projectDir
    
    // Define los comandos para jpackage
    commandLine = [
        'jpackage',
        '--type', 'app-image',
        '--name', 'NombreDeTuApp',
        '--input', "${buildDir}/libs", // Directorio donde está tu JAR
        '--main-jar', "all-in-one-jar.jar", // El nombre de tu JAR final
        '--main-class', 'main.Game',
        '--dest', "${buildDir}/dist" // Directorio de salida
    ]
}